; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/usbhost/Core/Src/extr_usbh_core.c_USBH_Init.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/usbhost/Core/Src/extr_usbh_core.c_USBH_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { void (%struct.TYPE_8__*, i32)*, i32, i32, i64, i32*, i32 }

@.str = private unnamed_addr constant [20 x i8] c"Invalid Host handle\00", align 1
@USBH_FAIL = common dso_local global i32 0, align 4
@USBH_OK = common dso_local global i32 0, align 4
@USBH_PROCESS_PRIO = common dso_local global i32 0, align 4
@USBH_Process_OS = common dso_local global i32 0, align 4
@USBH_Queue = common dso_local global i32 0, align 4
@USBH_Thread = common dso_local global i32 0, align 4
@configMINIMAL_STACK_SIZE = common dso_local global i32 0, align 4
@uint16_t = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @USBH_Init(%struct.TYPE_8__* %0, void (%struct.TYPE_8__*, i32)* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_8__*, align 8
  %6 = alloca void (%struct.TYPE_8__*, i32)*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %5, align 8
  store void (%struct.TYPE_8__*, i32)* %1, void (%struct.TYPE_8__*, i32)** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %9 = icmp eq %struct.TYPE_8__* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %3
  %11 = call i32 @USBH_ErrLog(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* @USBH_FAIL, align 4
  store i32 %12, i32* %4, align 4
  br label %33

13:                                               ; preds = %3
  %14 = load i32, i32* %7, align 4
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %15, i32 0, i32 5
  store i32 %14, i32* %16, align 8
  %17 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 4
  store i32* null, i32** %18, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 3
  store i64 0, i64* %20, align 8
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %22 = call i32 @DeInitStateMachine(%struct.TYPE_8__* %21)
  %23 = load void (%struct.TYPE_8__*, i32)*, void (%struct.TYPE_8__*, i32)** %6, align 8
  %24 = icmp ne void (%struct.TYPE_8__*, i32)* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %13
  %26 = load void (%struct.TYPE_8__*, i32)*, void (%struct.TYPE_8__*, i32)** %6, align 8
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %27, i32 0, i32 0
  store void (%struct.TYPE_8__*, i32)* %26, void (%struct.TYPE_8__*, i32)** %28, align 8
  br label %29

29:                                               ; preds = %25, %13
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %5, align 8
  %31 = call i32 @USBH_LL_Init(%struct.TYPE_8__* %30)
  %32 = load i32, i32* @USBH_OK, align 4
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %29, %10
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @USBH_ErrLog(i8*) #1

declare dso_local i32 @DeInitStateMachine(%struct.TYPE_8__*) #1

declare dso_local i32 @USBH_LL_Init(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
